k8s/BlogDashboard-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiq-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "ed5d520f2291efc6832ba8b12ee11a1c.gr7.eu-central-1.eks.amazonaws.com"
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 4000
          - path: /api/post
            pathType: Prefix
            backend:
              service:
                name: post
                port:
                  number: 4003
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 4001
